2000-12-19	Joel Sherrill <joel@OARcorp.com>

	* startup/linkcmds: Set _VBR to 0 to indicate that the vectors are
	in RAM not ROM.  Thanks to Juan Zamorano <jzamora@fi.upm.es> for
	debugging this.

2000-11-27	Joel Sherrill <joel@OARcorp.com>

	* start/start.S, startup/bspstart.c: Not functional for CPU32
	but hopefully will compile now and give a warning saying that
	the CPU32 variant needs work.

2000-11-09	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Use ... instead of RTEMS_TOPdir in ACLOCAL_AMFLAGS.

2000-11-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Switch to ACLOCAL_AMFLAGS = -I $(RTEMS_TOPdir)/aclocal.

2000-11-01	Joel Sherrill <joel@OARcorp.com>

	* startup/bspstart.c: assoc.h, error.h, libio_.h, libio.h,
	and libcsupport.h moved from libc to lib/include/rtems and
	now must be referenced as <rtems/XXX.h>.   Header file order
	was cleaned up while doing this.

2000-10-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: ACLOCAL_AMFLAGS= -I $(RTEMS_TOPdir)/macros.
        Switch to GNU canonicalization.

2000-09-29	Charles-Antoine Gauthier <charles.gauthier@nrc.ca>

	* startup/linkcmds: Added lines so DWARF debug information
	would be available.  Otherwise gdb complains that the offsets
	for the debug info are incorrect and doesn't load the files.

2000-09-04	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* clock/Makefile.am, console/Makefile.am, start/Makefile.am,
	startup/Makefile.am, wrapup/Makefile.am: Include compile.am

2000-08-10	Joel Sherrill <joel@OARcorp.com>

	* ChangeLog: New file.