@@ -61,7 +61,7 @@ void bsp_start( void )
 
   _M68k_Ramsize = (unsigned long)&_RamSize; /* RAM size set in linker script */
 
-#if defined(cpu32)
+#if defined(mcpu32)
 #warning "do something about vectors!!!"
 #endif
 
